--- a/app/src/main/webapp/WEB-INF/web.xml
+++ b/app/src/main/webapp/WEB-INF/web.xml
@@ -12,8 +12,8 @@
     </context-param>
 
     <context-param>
-        <param-name>javax.faces.WEBAPP_RECOURCES_DIRECTORY</param-name>
-        <param-value>/recources</param-value>
+        <param-name>javax.faces.WEBAPP_RESOURCES_DIRECTORY</param-name>
+        <param-value>/resources</param-value>
     </context-param>
 
     <welcome-file-list>
